# Webscout

./: DOCKERFILE_CHANGES.md  DOCKER_AUTH_TROUBLESHOOTING.md  DOCKER_QUICK_START.md  Dockerfile  Dockerfile.local  README.md  WEBSCOUT_ANALYSIS_AND_FIXES.md  changelog.md  docker-compose.auth.yml  docker-compose.no-auth.yml  docker-compose.yml  pyproject.toml  run-auth-mode.bat  run-auth-mode.sh  test.py
.github/: AI_CHANGELOG.md
.github/workflows/: auto-assign-bug.yml  auto-merge-dependencies.yml  dependency-review.yml  labeler.yml  publish-to-pypi.yml  release-with-changelog.yml
docs/: inferno.md  openai-api-server.md  scout.md  search.md
webscout/: AIutel.py  __init__.py  cli.py  client.py  tempid.py  update_checker.py  version.py  webscout_search.py
webscout/Extra/YTToolkit/: README.md
webscout/Extra/tempmail/: README.md
webscout/Provider/: Aitopia.py  Andi.py  Apriel.py  ChatGPTClone.py  ChatSandbox.py  ClaudeOnline.py  Cloudflare.py  Cohere.py  DeepAI.py  Deepinfra.py  ExaAI.py  ExaChat.py  Flowith.py  GMI.py  Gemini.py  GeminiProxy.py  GithubChat.py  Gradient.py  Groq.py  HeckAI.py  Jadve.py  K2Think.py  Koboldai.py  LambdaChat.py  Nemotron.py  Netwrck.py  OLLAMA.py  OpenGPT.py  PI.py  Perplexitylabs.py  QwenLM.py  Sambanova.py  StandardInput.py  TeachAnything.py  TextPollinationsAI.py  TogetherAI.py  TwoAI.py  TypliAI.py  Venice.py  VercelAI.py  (+28 more)
webscout/Provider/AISEARCH/: scira_search.py
webscout/Provider/OPENAI/: BLACKBOXAI.py  Cloudflare.py  DeepAI.py  FalconH1.py  FreeGemini.py  K2Think.py  NEMOTRON.py  PI.py  Qwen3.py  README.md  TogetherAI.py  TwoAI.py  __init__.py  ai4chat.py  api.py  base.py  c4ai.py  chatglm.py  chatgpt.py  chatgptclone.py  chatsandbox.py  deepinfra.py  exachat.py  flowith.py  generate_api_key.py  gmi.py  heckai.py  netwrck.py  refact.py  scirachat.py  standardinput.py  textpollinations.py  toolbaz.py  typefully.py
webscout/Provider/OPENAI/tests/: test_api.py  test_blackboxai.py
webscout/Provider/TTI/: bing.py  claudeonline.py
webscout/Provider/TTS/: __init__.py  base.py  openai_fm.py  openai_utils.py  streamElements.py
webscout/Provider/UNFINISHED/: GizAI.py  liner.py
webscout/auth/: routes.py
webscout/litprinter/: __init__.py
webscout/scout/: README.md  element.py
webscout/scout/core/: scout.py
webscout/search/: __init__.py  base.py  bing_main.py  duckduckgo_main.py  http_client.py  results.py  yahoo_main.py  yep_main.py
webscout/search/engines/: __init__.py  bing.py  bing_news.py  brave.py  mojeek.py  wikipedia.py  yahoo.py  yahoo_news.py  yandex.py
webscout/search/engines/bing/: __init__.py  base.py  images.py  news.py  suggestions.py  text.py
webscout/search/engines/duckduckgo/: __init__.py  answers.py  base.py  images.py  maps.py  news.py  suggestions.py  text.py  translate.py  videos.py  weather.py
webscout/search/engines/yahoo/: __init__.py  answers.py  base.py  images.py  maps.py  news.py  suggestions.py  text.py  translate.py  videos.py  weather.py
webscout/search/engines/yep/: __init__.py  base.py  images.py  suggestions.py  text.py
webscout/server/: __init__.py  config.py  request_processing.py  routes.py  schemas.py  server.py  simple_logger.py
webscout/zeroart/: README.md  __init__.py  effects.py  fonts.py
