[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webscout"
# Using dynamic version from webscout.version
dynamic = ["version"]
description = "Search for anything using Google, DuckDuckGo, phind.com, Contains AI models, can transcribe yt videos, temporary email and phone number generation, has TTS support, webai (terminal gpt and open interpreter) and offline LLMs and more"
readme = "README.md"
authors = [
    {name = "OEvortex", email = "helpingai5@gmail.com"}
]
requires-python = ">=3.9"
license = {text = "HelpingAI"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
    "Topic :: Utilities",
]
keywords = [
    "search", "ai", "chatbot", "llm", "language-model", "gpt", "openai",
    "gemini", "claude", "llama", "search-engine", "text-to-speech", "tts",
    "text-to-image", "tti", "weather", "youtube", "toolkit", "utilities",
    "web-search", "duckduckgo", "google", "yep"
]
dependencies = [
    "setuptools>=42.0.0",
    "wheel>=0.37.0",
    "pip>=21.0.0",
    "nodriver>=0.28.0",
    "mistune>=3.0.0",
    "curl_cffi>=0.5.0",
    "nest-asyncio>=1.5.0",
    "websocket-client>=1.0.0",
    "colorama>=0.4.4",
    "rich>=13.0.0",
    "markdownify>=0.11.0",
    "requests>=2.28.0",
    "google-generativeai>=0.3.0",
    "lxml>=5.2.2",
    "orjson>=3.8.0",
    "PyYAML>=6.0.0",
    "ollama>=0.1.0",
    "pillow>=9.0.0",
    "bson>=0.5.10",
    "cloudscraper>=1.2.60",
    "html5lib>=1.1",
    "aiofiles>=22.0.0",
    "openai>=1.0.0",
    "gradio_client>=0.8.0",
    "psutil>=5.9.0",
    "aiohttp>=3.8.0",
    "zstandard>=0.19.0",
    "brotli>=1.0.9",
    "packaging>=21.0"
]

[project.scripts]
WEBS = "webscout.cli:main"
webscout = "webscout.cli:main"
webscout-server = "webscout.auth.server:main"  # Instantly start the OpenAI-compatible API server

[project.urls]
Source = "https://github.com/OEvortex/Webscout"
Tracker = "https://github.com/OEvortex/Webscout/issues"
YouTube = "https://youtube.com/@OEvortex"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",  # Added tiktoken for token counting support
    "motor>=3.3.0",  # MongoDB async driver for enhanced authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pymongo>=4.0.0",
    "slowapi>=0.1.9",
    "python-telegram-bot>=20.0.0"
]
test = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.24.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0"
]

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # Specifies the root directory for packages (project root)
include = ["webscout*"]  # Tells find_packages to include only 'webscout' and its subpackages
exclude = ["__pycache__", "*.pyc"]  # Excludes common non-package directories/files
namespaces = true  # Enables automatic discovery of namespace packages

[tool.setuptools.dynamic]
version = {attr = "webscout.version.__version__"}

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yaml", "*.yml", "*.py", "*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]
"webscout" = ["*"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I"]
ignore = ["E501"]
